--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <base target='_blank'>
 
         <title>WebRTC web client</title>
-        
+
     </head>
 
     <body>
@@ -18,6 +18,10 @@
             <div id='videos'>
                 <video id='localVideo' autoplay muted></video>
                 <video id='remoteVideo' autoplay></video>
+            </div>
+            <div id='buttons'>
+                <button id="callButton">Call</button>
+                <button id="hangupButton">Hang Up</button>
             </div>
         </div>
 
