using text area to show server log

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <button id="callButton">Call</button>
                 <button id="hangupButton">Hang Up</button>
             </div>
+            <br><br>
+            <textarea id='logTextArea' rows="10" cols="100" readonly></textarea>
         </div>
 
         <script src='/socket.io/socket.io.js'></script>
