--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
                 <video id='localVideo' autoplay muted></video>
                 <video id='remoteVideo' autoplay></video>
             </div>
-            <div id='buttons'>
-                <button id="callButton">Call</button>
-                <button id="hangupButton">Hang Up</button>
-            </div>
+            <button id='holdButton'>Hold</button>
             <br><br>
-            <textarea id='logTextArea' rows="10" cols="100" readonly></textarea>
+            <textarea id='logTextArea' rows='20' cols='100' readonly></textarea>
         </div>
 
         <script src='/socket.io/socket.io.js'></script>
